# cookiecutter-django-api

./: .gitignore  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  README.rst  compose-local.yaml  manage.py  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/.envs/.local/: .postgres
{{cookiecutter.project_slug}}/compose/local/: Dockerfile
{{cookiecutter.project_slug}}/config/: wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  production.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt  production.txt
{{cookiecutter.project_slug}}/src/: .coveragerc  pyproject.toml
{{cookiecutter.project_slug}}/src/config/: urls.py
{{cookiecutter.project_slug}}/src/config/settings/: base.py  local.py  production.py
{{cookiecutter.project_slug}}/src/core/: paginations.py  renderers.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: authentications.py  mixins.py  paginations.py  renderers.py  utils.py
